# agents-monitor-people

./: .env-example  DEVELOPER.md  README.md  config.yaml  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: agent-runner.yml
docs/api/: API.yaml  agents_monitor_people.cli.cli.md  agents_monitor_people.main.md  agents_monitor_people.parsers.openstates_people_parser.md
mkdocs_src/api/: main.md  parsers.openstates_people_parser.md
parsers/: openstates_people_parser.py
reports/2025-06-17/: 2025-06-17-people-report.yaml
reports/2025-06-18/: 2025-06-18-people-report.yaml
reports/2025-06-19/: 2025-06-19-people-report.yaml
reports/2025-06-20/: 2025-06-20-people-report.yaml
reports/2025-06-21/: 2025-06-21-people-report.yaml
reports/2025-06-22/: 2025-06-22-people-report.yaml
reports/2025-06-23/: 2025-06-23-people-report.yaml
reports/2025-06-24/: 2025-06-24-people-report.yaml
reports/2025-06-25/: 2025-06-25-people-report.yaml
reports/2025-06-26/: 2025-06-26-people-report.yaml
reports/2025-06-27/: 2025-06-27-people-report.yaml
reports/2025-06-28/: 2025-06-28-people-report.yaml
reports/2025-06-29/: 2025-06-29-people-report.yaml
reports/2025-06-30/: 2025-06-30-people-report.yaml
reports/2025-07-01/: 2025-07-01-people-report.yaml
reports/2025-07-02/: 2025-07-02-people-report.yaml
reports/2025-07-03/: 2025-07-03-people-report.yaml
reports/2025-07-04/: 2025-07-04-people-report.yaml
reports/2025-07-05/: 2025-07-05-people-report.yaml
reports/2025-09-24/: 2025-09-24-people-report.yaml
reports/2025-09-28/: 2025-09-28-people-report.yaml
(+42 files in other folders)
