[project]
authors = [
  {name = "Civic Interconnect", email = "info@civic-interconnect.org"},
]
description = "Civic Interconnect People and Roles Agent"
license = {text = "MIT"}
name = "agents-monitor-people"
readme = "README.md"
requires-python = ">=3.12"
version = "0.2.5"

dependencies = [
  "python-dotenv",
  "PyYAML",
  "typer[all]",
  "rich",
  "GitPython",
  "requests",
  "gql[aiohttp]",
  "pandas",
  "civic-lib-core @ git+https://github.com/civic-interconnect/civic-lib-core.git@main",
]

[project.optional-dependencies]
dev = [
  "mkdocs",
  "mkdocs-material",
  "pre-commit",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "ruff",
]

[project.urls]
"Homepage" = "https://github.com/civic-interconnect/civic-lib-core"
"Source" = "https://github.com/civic-interconnect/civic-lib-core"

[project.scripts]
civic-dev = "civic_dev.cli:app"
people-agent = "agents_monitor_people.cli.cli:app"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
fix = true
line-length = 100
preview = true
target-version = "py312"
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["E", "F", "W", "I", "UP", "C90", "N", "B", "A", "SIM"]
ignore = ["E501"] # line length handled by formatter

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
minversion = "7.0"
python_files = "test_*.py"
testpaths = [
  "tests",
]
